--- a/TaskTrackerStyle.css
+++ b/TaskTrackerStyle.css
@@ -13,7 +13,7 @@ table{
 
 h1{
     color: #1c1d21;
-    background-color: #BB9BB0;
+    background-color: #F1E3E4;
     font-size: 30px;
     font-style: inherit;
     text-align: center; /* Center the header */
