--- a/TaskTrackerStyle.css
+++ b/TaskTrackerStyle.css
@@ -2,16 +2,29 @@
     box-sizing: border-box;
 }
 
+body {
+    margin: 0; /* Remove default body margin */
+    background-color: white; 
+    font-family: Helvetica;;
+    padding:15px;
+}
+
 table{
-    color: #1c1d21;
+    /* color: #1c1d21;
     background-color: white; 
     font-size: 20px;
     font-style: inherit;
-    margin: 0;
     padding-top: 10px;
     padding-right: 10px;
-    /*border-collapse: separate;*/
-    font-family: Helvetica;
+    /*border-collapse: separate;
+    font-family: Helvetica; */
+
+    width: 100%;
+    margin-top: 20px;
+    font-weight: lighter;
+    font-size: 20px;
+    border: 1px solid #333;
+    padding: 5px;
 
 }
 
@@ -30,29 +43,31 @@ h1{
 }
 */
 
-body {
-    margin: 0; /* Remove default body margin */
-    background-color: white; 
-    font-family: Helvetica;;
-    padding:15px;
-}
 
 td {
-    padding: 10px;
-    text-align: top;
-    vertical-align: middle;
+    /* 
     border-color: #1c1d21;
-    border-style: solid;
-    font-family: Helvetica;
+    font-family: Helvetica; */
+
+    border: 1.5px solid #ddd;
+    padding: 10px;
+    vertical-align: middle;
+    text-align: top;
+
 }
 
 th{
-    padding: 20px;
+    /* padding: 20px;
     text-align: left;
-    /*border-left: 1px solid #1c1d21;*/
+    /*border-left: 1px solid #1c1d21;
     border-color: #1c1d21;
     border-style: solid;
-    font-family: Helvetica;
+    font-family: Helvetica; */
+
+    padding: 15px;
+    text-align: left;
+    border: 2px solid #333;
+    background-color: #EAF5F6E2;
 }
 
 /*styles for the header and the naviagtion bar*/
